--- a/src/main/webapp/css/bootstrap/3.3.6/css/bootstrap.css
+++ b/src/main/webapp/css/bootstrap/3.3.6/css/bootstrap.css
@@ -4324,7 +4324,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-nav {
-  margin: 7.5px -15px;
+  margin: 5px -10px;
+  line-height: 30px;
 }
 .navbar-nav > li > a {
   padding-top: 10px;
